# Agate3DEvolver

./: .gitignore  CMakeLists.txt  main.cpp  mesh_functions.cpp  mesh_functions.h
3rd_party_resources/: happly.h
FIM/: CMakeLists.txt  main.cu
FMM/: CMakeLists.txt  main.cpp  mesh_functions_fmm.cpp  mesh_functions_fmm.h
GPU/: CMakeLists.txt  main.cu  mesh_functions_gpu.cu  mesh_functions_gpu.cuh
SCRIPTS/: bands_reconstruction.py  channel_analysis.py  geode_reconstruction.py  interpolation.py  process_results.py  show_results.py
